<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sqlsample.SplashActivity">

    <TextView
        android:id="@+id/textView_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textSize="30dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_signUp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <EditText
            android:id="@+id/editText_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/editText_lName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPassword"
            android:maxLines="1"/>


        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_mail" />


        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/mobile"
            android:maxLines="1"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_phone" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</RelativeLayout>
