<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"/>

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/textView_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile" />

    </LinearLayout>

</LinearLayout>
