<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sqlsample.SplashActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:id="@+id/linearLayout"
       android:padding="25dp"
       android:orientation="vertical">


       <EditText
           android:id="@+id/editText_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:ems="10"
           android:maxLines="1"
           android:hint="@string/email"
           android:inputType="textEmailAddress"
           android:drawableLeft="@drawable/ic_mail" />

       <EditText
           android:id="@+id/editText_password"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_marginTop="10dp"
           android:ems="10"
           android:hint="@string/password"
           android:maxLines="1"
           android:inputType="textPassword"
           android:drawableLeft="@drawable/ic_password">
           <requestFocus/>
       </EditText>

       <Button
           android:id="@+id/button_login"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:background="@color/colorPrimary"
           android:textColor="@color/colorWhite"
           android:text="@string/login" />

   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_signUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:text="@string/signUp" />
    </LinearLayout>



</RelativeLayout>
